# microtext

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  microtext.h
.github/workflows/: ci.yml
doc/: develop.md  doc.md
examples/: demo_1_showcase.c  demo_2_raylib.c  mt_raylib.h  raylib_demo.c  showcase.c
tests/: fuzz.c  golden.c  leaks.entitlements  test_dump.c
